Successfully outputs data for invasions from Warframe Tracker.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".AlertsActivity">
         </activity>
+        <activity android:name=".InvasionsActivity">
+        </activity>
     </application>
 
 </manifest>
