Some progress for Darvo, Void Trader, and Sorties. These do not work without Javascript.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".InvasionsActivity">
         </activity>
+        <activity android:name=".SortiesActivity">
+        </activity>
     </application>
 
 </manifest>
